test/examples/good/simple_function.ml
val add_one : int -> int
let add_one x = x + 1
